[project]
dynamic = ["version"]
name = "edge-proxy"
dependencies = [
  "fastapi",
  "flagsmith-flag-engine>4,<5",
  "httpx",
  "marshmallow",
  "orjson",
  "pydantic<2",
  "python-decouple",
  "python-dotenv",
  "structlog",
  "uvicorn",
]
requires-python = ">= 3.12"

[tool.rye]
managed = true
virtual = true
dev-dependencies = [
  "pre-commit",
  "pytest",
  "pytest-asyncio",
  "pytest-mock",
  "reorder-python-imports",
  "certifi",
  "pytest-freezegun",
]

[tool.ruff]
line-length = 88

[tool.ruff.lint.isort]
known-first-party = ['fastapi_utils']

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.pytest.ini_options]
pythonpath = ["src"]
